--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,13 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
-Django = ">=3.2,<4.2"
-PyJWT = ">=2.6.0,<3.0"
+python = "^3.8"
+Django = ">=3.2"
+PyJWT = ">=2.6.0"
 strawberry-graphql-django = { version = ">=0.2.5,<4.0", allow-prereleases = true }
 Pillow = "^9.2.0"
-strawberry-graphql = ">=0.128,<0.171.0"
-strawberry-django-plus = ">=1.25.2,<3.0.0"
+strawberry-graphql = ">=0.128"
+strawberry-django-plus = ">=1.25.2"
 
 [tool.poetry.dev-dependencies]
 coverage = "^7.2"
